Break REST implementation into packages and pull out lifecycle and planning from TableResource