@@ -140,7 +140,7 @@
             <include>**/*Test.java</include>
           </includes>
           <skipTests>${skipUTs}</skipTests>
-          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED -Djdk.attach.allowAttachSelf=true</argLine>
         </configuration>
       </plugin>
       <plugin>
